[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/slimeBlue.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slimeBlue_blue.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.3728, 14.2965 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.4432, 1.69253 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.2447, 10.3408 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 39
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.471939, 2.2417 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( -0.445465, -14.4294 )
shape = SubResource( 3 )

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 0, 4.5 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
